welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: ')' expected but '<-' found.
      if (depY<-6){
              ^ColumnByColumn:23: error: illegal start of simple expression
  } 
  ^